Name: data-ip
Version: 0.0.1
Category: Network
Stability: experimental
Synopsis: Internet Protocol data structures
Description:
  This package provides Internet Protocol data structures

Homepage: https://github.com/mvv/data-ip
Bug-Reports: https://github.com/mvv/data-ip/issues

Author: Mikhail Vorozhtsov <mikhail.vorozhtsov@gmail.com>
Maintainer: Mikhail Vorozhtsov <mikhail.vorozhtsov@gmail.com>
Copyright: 2011 Mikhail Vorozhtsov <mikhail.vorozhtsov@gmail.com>
License: BSD3
License-File: LICENSE

Cabal-Version: >= 1.6.0
Build-Type: Simple

Source-Repository head
  Type: git
  Location: https://github.com/mvv/data-ip.git

Library
  Build-Depends: base < 5, data-default, data-endian
  Hs-Source-Dirs: src
  GHC-Options: -Wall
  Exposed-Modules:
    Data.IP.Addr

